--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -132,6 +132,16 @@
                           <% end %>
                         </li>
                       <% end %>
+                      <% if current_user.can_access?(:grade_cards) %>
+                        <li>
+                          <%= link_to grade_cards_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/grade_cards') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/grade_cards') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                              <path d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            Grade Cards
+                          <% end %>
+                        </li>
+                      <% end %>
                       <% if current_user.can_access?(:saturday_scoops) %>
                         <li>
                           <%= link_to saturday_scoops_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/saturday_scoops') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
@@ -280,6 +290,16 @@
                             <path d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" stroke-linecap="round" stroke-linejoin="round" />
                           </svg>
                           Community Service
+                        <% end %>
+                      </li>
+                    <% end %>
+                    <% if current_user.can_access?(:grade_cards) %>
+                      <li>
+                        <%= link_to grade_cards_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/grade_cards') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/grade_cards') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Grade Cards
                         <% end %>
                       </li>
                     <% end %>
